--- a/src/components/skills.css
+++ b/src/components/skills.css
@@ -41,7 +41,7 @@
 
 /* Add some padding inside the card container */
 .card-container {
-  padding: 2px 15px 40px;
+  padding: 2px 30px 40px;
 }
 
 .skills-front-backend {
